--- a/Plugins/GeodesicMeasurement/Filters/FmmMesh/CMakeLists.txt
+++ b/Plugins/GeodesicMeasurement/Filters/FmmMesh/CMakeLists.txt
@@ -50,7 +50,8 @@ target_include_directories(${PROJECT_NAME}
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/gw_core>"
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/gw_geodesic>")
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/gw_geodesic>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/gw_maths>")
 set_property(TARGET "${PROJECT_NAME}"
   PROPERTY
     POSITION_INDEPENDENT_CODE ON)
