--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -20,7 +20,7 @@ The following variables are provided by this module:
 #]==]
 
 set(${CMAKE_FIND_PACKAGE_NAME}_CMAKE_MODULE_PATH_save "${CMAKE_MODULE_PATH}")
-list(APPEND CMAKE_MODULE_PATH
+list(INSERT CMAKE_MODULE_PATH 0
   "${CMAKE_CURRENT_LIST_DIR}")
 
 set("${CMAKE_FIND_PACKAGE_NAME}_VERSION" "@PARAVIEW_VERSION_FULL@")
