linux: remove forward executables
Instead, use `$ORIGIN` rpath entries.

Fixes: #18894

--- a/Applications/ParaView/CMakeLists.txt
+++ b/Applications/ParaView/CMakeLists.txt
@@ -30,11 +30,6 @@ set(sources
   ParaViewMainWindow.h
   ParaViewMainWindow.ui)
 
-set(paraview_forward_executable OFF)
-if (UNIX AND NOT APPLE)
-  set(paraview_forward_executable ON)
-endif ()
-
 find_package(Qt5 REQUIRED QUIET COMPONENTS Core Widgets)
 
 if (APPLE)
@@ -64,8 +59,7 @@ paraview_client_add(
   APPLICATION_ICON  "${CMAKE_CURRENT_SOURCE_DIR}/pvIcon.ico"
   SOURCES           ${sources}
   PLUGINS_TARGET    paraview_plugins
-  APPLICATION_XMLS  ${xmls}
-  FORWARD_EXECUTABLE "${paraview_forward_executable}")
+  APPLICATION_XMLS  ${xmls})
 
 find_package(Qt5 REQUIRED QUIET COMPONENTS Widgets)
 
