Adding a plugin to expose vtkExplicitStructuredGrid related filters
This adds a plugin that expose filters to convert from and to
explicit structured grid, as well as a crop filter.
This also add tests for these filters.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -594,6 +594,7 @@ set(paraview_default_plugins
   EULATestPlugin
   EmbossingRepresentations
   EyeDomeLighting
+  ExplicitStructuredGrid
   GenericIOReader
   GeodesicMeasurement
   GMVReader
