Log-view widget

--- a/Qt/Widgets/CMakeLists.txt
+++ b/Qt/Widgets/CMakeLists.txt
@@ -65,6 +65,7 @@ set(classes
   pqLineEditEventPlayer
   pqListWidgetCheckHelper
   pqListWidgetItemObject
+  pqLogViewerWidget
   pqMultiColumnHeaderView
   pqProgressWidget
   pqQuickLaunchDialog
@@ -120,8 +121,9 @@ vtk_module_find_package(
 set(ui_files
   Resources/UI/pqExpanderButton.ui
   Resources/UI/pqHelpWindow.ui
-  Resources/UI/pqSeriesGeneratorDialog.ui
-  Resources/UI/pqQuickLaunchDialog.ui)
+  Resources/UI/pqLogViewerWidget.ui
+  Resources/UI/pqQuickLaunchDialog.ui
+  Resources/UI/pqSeriesGeneratorDialog.ui)
 
 ##########################################################################
 ## Add resources.
