Update to use the name of the new unified ray tracing module

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -530,7 +530,7 @@ else()
     TruchasReader.xml)
 endif()
 
-if(PARAVIEW_USE_OSPRAY)
+if(PARAVIEW_USE_RAYTRACING)
   list(APPEND TESTS_WITH_BASELINES
     OSPRay.xml)
 endif()
