Move pqAnimationTimeWidget to Qt/Components
This makes it available to other widgets in Qt/Components, whereas
before it was available to Qt/ApplicationComponents.

--- a/Qt/Components/CMakeLists.txt
+++ b/Qt/Components/CMakeLists.txt
@@ -36,6 +36,7 @@ set(classes
   pqAnimatablePropertiesComboBox
   pqAnimatableProxyComboBox
   pqAnimationManager
+  pqAnimationTimeWidget
   pqAnimationViewWidget
   pqArrayListDomain
   pqArraySelectionWidget
@@ -181,6 +182,7 @@ set(headers
 set(ui_files
   Resources/UI/pqAbortAnimation.ui
   Resources/UI/pqAboutDialog.ui
+  Resources/UI/pqAnimationTimeWidget.ui
   Resources/UI/pqFavoritesDialog.ui
   Resources/UI/pqCalculatorWidget.ui
   Resources/UI/pqCameraDialog.ui
