Add a plugin to support ParFlow simulations.
See [parflow.org](https://parflow.org/) for more information about ParFlow.

The plugin is disable by default as it has a dependency to nlohmann_json.
The SuperBuild on the other hand will bring nlohmann_json and build it in
Kitware generated bundle.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -622,6 +622,7 @@ set(paraview_default_plugins
   NonOrthogonalSource
   PacMan
   PanoramicProjectionView
+  # ParFlow - Because of dependency to nlohmann_json
   SLACTools
   SierraPlotTools
   StreamLinesRepresentation
