fix tile display with translucent geometry
Since vtkIceTCompositePass renders to full window irrespective of
renderer's viewport, need to make sure that the vtkRenderer's viewport
is updated to full size as well, otherwise internal passes like depth
peeling can have issues when rendering on tile displays.

Fixes paraview/paraview#18978

Updating TileDisplaySplitView to test translucent geomtry. Also added
support to render larger tiles for better test image comparison.

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -338,6 +338,10 @@ ExternalData_Expand_Arguments(ParaViewData _
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-3x1-tile0.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-3x1-tile1.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-3x1-tile2.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-2x2-tile0.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-2x2-tile1.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-2x2-tile2.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TileDisplaySplitView-2x2-tile3.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TimeStepProgressBar_Inter.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TraceExodus.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TraceMultiViews.png}"
@@ -1542,6 +1546,8 @@ paraview_add_tile_display_tests(1 1
    TEST_SCRIPTS TileDisplaySplitView.xml)
 if (PARAVIEW_USE_MPI)
   paraview_add_tile_display_tests(2 1
+     TEST_SCRIPTS TileDisplaySplitView.xml)
+  paraview_add_tile_display_tests(2 2
      TEST_SCRIPTS TileDisplaySplitView.xml)
   paraview_add_tile_display_tests(3 1
      TEST_SCRIPTS TileDisplaySplitView.xml)
