--- a/Plugins/EyeDomeLighting/Testing/CMakeLists.txt
+++ b/Plugins/EyeDomeLighting/Testing/CMakeLists.txt
@@ -1,16 +1,44 @@
-set(EYE_DOME_LIGHTING_TESTS
-  EyeDomeLighting.xml
-)
+if (PARAVIEW_BUILD_QT_GUI)
+  set(tests
+    EyeDomeLighting.xml)
 
-if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
   paraview_add_client_tests(
     LOAD_PLUGIN "EyeDomeLighting"
     BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline"
     TEST_DATA_TARGET ParaViewData
-    TEST_SCRIPTS ${EYE_DOME_LIGHTING_TESTS}
+    TEST_SCRIPTS ${tests}
+  )
+  paraview_add_client_server_tests(
+   LOAD_PLUGIN "EyeDomeLighting"
+    BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${tests}
+  )
+  paraview_add_client_server_render_tests(
+   LOAD_PLUGIN "EyeDomeLighting"
+    BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${tests}
   )
 endif ()
 
+if (PARAVIEW_BUILD_QT_GUI AND PARAVIEW_USE_MPI)
+  set(tests
+    EDLWithSubsampling.xml)
+
+  paraview_add_client_server_tests(
+   LOAD_PLUGIN "EyeDomeLighting"
+    BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${tests}
+  )
+  paraview_add_client_server_render_tests(
+   LOAD_PLUGIN "EyeDomeLighting"
+    BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS ${tests}
+  )
+endif()
 
 if (TARGET ParaView::pvpython)
   # this test is not specific to the EyeDomeLighting plugin, it is meant
