Expose depth of field controls in camera dialog

--- a/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
@@ -60,6 +60,7 @@ set(classes
   vtkPVCacheKeeper
   vtkPVCacheKeeperPipeline
   vtkPVCacheSizeInformation
+  vtkPVCamera
   vtkPVClientServerSynchronizedRenderers
   vtkPVCompositeOrthographicSliceRepresentation
   vtkPVCompositeRepresentation
